--- a/public/searchPage.html
+++ b/public/searchPage.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="author" content="Sabrina" />
+    <meta name="description" content="Lorem ipsum dolor sit amet" />
+    <meta
+      name="viewport"
+      content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width"
+    />
     <title>Search Page</title>
 
     <!-- FONT AWESOME -->
@@ -121,38 +125,42 @@
 
             <div class="select-driver">
                 <label>Tipe Driver</label>
-                <select class="form-select" aria-label="Default select example">
-                    <option selected>Pilih Tipe Driver</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
+                <select class="form-select" id="opsi-driver" aria-label="Default select example" required>
+                    <option class="opsi" value="" selected hidden>Pilih Tipe Driver</option>
+                    <option class="opsi" value="true">Dengan Sopir</option>
+                    <option class="opsi" value="false">Tanpa Sopir (Lepas Kunci)</option>
                 </select>
             </div>
             <div class="select-driver">
                 <label>Tanggal</label>
-                <input class="form-control" type="date" placeholder="After" />
+                <input class="form-control" type="date" id="tanggal" required/>
             </div>
             <div class="select-driver">
                 <label>Waktu Jemput/Ambil</label>
-                <select class="form-select" aria-label="Default select example">
-                    <option selected>Pilih Tipe Driver</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                </select>
+                <input class="form-control" type="time" id="waktu"  required/>
             </div>
             <div class="select-penumpang">
                 <label>Jumlah Penumpang (Optional)</label>
-                <input class="form-control" type="number" placeholder="Jumlah Penumpang" />
+                <input class="form-control" type="number" id="penumpang" placeholder="Jumlah Penumpang" required/>
             </div>
             
-            <button type="button" class="btn-search">Cari Mobil</button>
+            <button type="submit" class="btn-search" id="load-btn">Cari Mobil</button>
 
         </div>
       </div>
 </section>
 
 <!-- END CARD SEARCH FILTER-->
+
+<!-- RESULT -->
+
+<div class="result-container">
+    <div class="result" id="cars-container"></div>
+        
+    </div>
+</div>
+
+<!-- END RESULT -->
 
 <!-- FOOTER -->
 
@@ -200,5 +208,12 @@
 </footer>
 
 <!-- END FOOTER -->
+
+<!-- Example Javascript -->
+<script type="text/javascript" src="./scripts/binar.js"></script>
+<script type="text/javascript" src="./scripts/app.example.js"></script>
+<script type="text/javascript" src="./scripts/car.example.js"></script>
+<script type="text/javascript" src="./scripts/main.example.js"></script>
+
 </body>
 </html>
