--- a/public/home.html
+++ b/public/home.html
@@ -34,7 +34,7 @@
 <!-- NAVIGATION BAR -->
     <nav class="navbar navbar-expand-lg " style="position: fixed;">
         <div class="container-nav w-100">
-            <a class="navbar-brand" href="#">Sewo Mobil</a>
+            <a class="navbar-brand" href="/">Sewo Mobil</a>
             
             <div class="navigation">
                 <ul class="navbar-nav">
@@ -107,7 +107,7 @@
             <p>
                 Selamat datang di Binar Car Rental. Kami Menyediakan mobil berkualitas terbaik dengan harga terjangkau. Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24 jam.
             </p>
-            <button type="button" class="btn-register">Mulai Sewa Mobil</button>
+        <a href="./cars"><button type="button" class="btn-register">Mulai Sewa Mobil</button></a>
         </div>
         <div class="header-right">
             <img src="images/img_car.png" alt="Mobil">
