--- a/public/searchPage.html
+++ b/public/searchPage.html
@@ -34,7 +34,7 @@
     <!-- NAVIGATION BAR -->
     <nav class="navbar navbar-expand-lg " style="position: fixed;">
         <div class="container-nav w-100">
-            <a class="navbar-brand" href="#">Sewo Mobil</a>
+            <a class="navbar-brand" href="/">Sewo Mobil</a>
             
             <div class="navigation">
                 <ul class="navbar-nav">
